<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_get">

    <fragment
        android:id="@+id/navigation_get"
        android:name="ru.nsu.morozov.qrshare.ui.get.GetFragment"
        android:label="@string/title_get"
        tools:layout="@layout/fragment_get" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="ru.nsu.morozov.qrshare.ui.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share">
        <argument
            android:name="share_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
        <argument
            android:name="share_data"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/action_navigation_share_to_navigation_scanner"
            app:destination="@id/navigation_scanner" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="ru.nsu.morozov.qrshare.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_fragment_session_info"
            app:destination="@id/fragment_session_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="ru.nsu.morozov.qrshare.ui.share.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scanner">
    </fragment>

    <fragment
        android:id="@+id/fragment_session_info"
        android:name="ru.nsu.morozov.qrshare.ui.history.SessionInfoFragment"
        android:label="@string/title_session_info"
        tools:layout="@layout/fragment_scanner">
        <argument
            android:name="sid"
            app:argType="string"
            app:nullable="false"/>
    </fragment>

</navigation>